test/sc++/error/mesh-semicolon.scpp
../../scc/error/mesh-semicolon.sc